--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     height: var(--square-size); */
     border: lightgray solid 1px;
     flex: 1 1 auto;
+    opacity: 1;
 }
 
 .insideContainer {
